chore: fix css styles

--- a/public/assets/themes/default/designer_screen.css
+++ b/public/assets/themes/default/designer_screen.css
@@ -28,15 +28,17 @@ button {
 /* ------------------------------------- /* GridSelect component */ 
 
 .grid-select-pages-nav {
-  width: 100%;
-  justify-content: end;
   position: absolute;
-  left: -15%;
+  left: 0;
+  bottom: 0;
   z-index: 999;
 }
 .grid-select-layout {
-  position: relative;
+  height: 100%;
   direction: rtl;
+}
+.grid-select-slots-layout {
+  height: 100%;
 }
 .grid-select-page-btn {
   background: var(--mf-btn-bg-active);
@@ -66,8 +68,8 @@ button {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 }
 
-.mf-designer-screen-tpl .navigator-options,
 .mf-designer-screen-tpl .command-navigator,
+.mf-designer-screen-tpl .navigator-options,
 .mf-designer-screen-tpl .asset-grid,
 .mf-designer-screen-tpl .preview-frame {
   text-align: center;
@@ -82,24 +84,29 @@ button {
   position: relative;
 }
 
-.mf-designer-screen-tpl .navigator-options {
+.mf-designer-screen-tpl .command-navigator {
   width: 12.13%;
 }
 
-.mf-designer-screen-tpl .command-navigator {
+.mf-designer-screen-tpl .navigator-options {
   width: 14.7%;
 }
 
 .mf-designer-screen-tpl .command-panel-frame {
-  width: 45%;
+  height: 100%;
+  margin: 0 1%;
+  width: 50%;
 	display: flex;
 	flex-direction: row;
+  justify-content: space-between;
 	gap: 2%;
   position: relative;
 }
 
 .mf-designer-screen-tpl .asset-grid {
-  width: 100%;
+  height: 100%;
+  flex-grow: 1;
+  max-width: 85%;
   padding: 0.25% 0.25%;
 }
 
@@ -153,9 +160,9 @@ button {
   opacity: 1;
 }
 
-/* ------------------------------------- navigator-options */
+/* ------------------------------------- command-navigator */
 
-.mf-designer-screen-tpl .navigator-options .tab-layout {
+.mf-designer-screen-tpl .command-navigator .tab-layout {
   height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -163,7 +170,7 @@ button {
   justify-content: center;
 	gap: 2%;
 }
-.mf-designer-screen-tpl .navigator-options .tab {
+.mf-designer-screen-tpl .command-navigator .tab {
   display: block;
   height: 0;
   padding: 0;
@@ -174,15 +181,15 @@ button {
   background-size: auto 50%;
   border: none;
 }
-.mf-designer-screen-tpl .navigator-options .tab[data-selected] {
+.mf-designer-screen-tpl .command-navigator .tab[data-selected] {
   background-color: var(--mf-nav-btn-bg-active);
   width: 75%;
   padding-top: 75%;
 }
 
-/* ------------------------------------- command-navigator */
+/* ------------------------------------- navigator-options */
 
-.mf-designer-screen-tpl .command-navigator .tab {
+.mf-designer-screen-tpl .navigator-options .tab {
   display: block;
   width: 88%;
   margin: 5% auto 0;
@@ -196,7 +203,7 @@ button {
   text-wrap: nowrap;
   text-transform: uppercase;
 }
-.mf-designer-screen-tpl .command-navigator .tab[data-selected] {
+.mf-designer-screen-tpl .navigator-options .tab[data-selected] {
   background-color: var(--mf-btn-bg-active);
   color: var(--mf-btn-color-active);
   font-size: 1.5em;
@@ -236,11 +243,7 @@ button {
 
 /* ------------------------------------- color-grid */
 
-.mf-designer-screen-tpl .color-grid .grid-select-layout {
-  height: 100%;
-}
 .mf-designer-screen-tpl .color-grid .grid-select-slots-layout {
-  height: 100%;
   grid-template-columns: repeat(1, 1fr);
   justify-items: center;
 }
@@ -390,7 +393,6 @@ button {
   flex-direction: row;
   align-items: start;
   justify-content: center;
-	gap: 2%;
 	box-sizing: border-box;
 }
 
